--- a/Shop/Shop/Views/Shared/_Layout.cshtml
+++ b/Shop/Shop/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="RealEstates" asp-action="Index">Real Estates</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="OpenWeathers" asp-action="Index">open Weather</a>
+                        </li>
                     </ul>
                 </div>
             </div>
