Kindergarten : + KindergartenServices + Shop.Core.Domain.Kindergarten + Shop.Core.Dto.KindergartenDto + Shop.Core.ServiceInterface.IKindergartenServices ++ Some more additions

--- a/Shop/Shop/Views/Kindergarten/CreateUpdate.cshtml
+++ b/Shop/Shop/Views/Kindergarten/CreateUpdate.cshtml
@@ -14,6 +14,7 @@ else
 <div>
     <form method="post" enctype="multipart/form-data">
         <input asp-for="Id" type="hidden" />
+        <input asp-for="CreatedAt" type="hidden" />
 
         <div class="form-group row">
             <label asp-for="GroupName" class="col-sm-2 col-form-label"></label>
@@ -58,8 +59,7 @@ else
 
     </form>
 </div>
-
-@section Scripts
+ @* @section Scripts
     {
     <script>
         $(document).ready(function () {
@@ -74,5 +74,5 @@ else
                 }
             });
         });
-    </script>
-}
+    </script>  *@
+
